# Hank-Mardukas

./: .env.example  .gitignore  README.md  pyproject.toml
.claude/: launch.json
.github/workflows/: run.yml  tests.yml
data/: petmatch.db
scripts/: serve_site.py
src/petmatch/: __init__.py  config.py  dashboard.py  email_send.py  geo.py  main.py  models.py  normalize.py  report.py  review.py  storage.py
src/petmatch/match/: __init__.py  filter.py  photo.py  pipeline.py
src/petmatch/sources/: __init__.py  base.py  craigslist.py  petco.py
tests/: test_matching.py  test_scrapers.py
web/assets/: app.js  styles.css
web/templates/: dashboard.html.j2  email.html.j2  stats.html.j2
